# Transcriber

./: .gitattributes  .gitignore  LICENSE  README.md  Transcriber.py  app.py  app_gui.py  ffmpeg_setup.py  main.py  parser.py  pyproject.toml  test_picker.py  transcribe.py  utils.py
src/transcribe/: __init__.py
