[project]
name = "transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.13"
dependencies = [
    "flet>=0.80.5",
    "flet-audio>=0.80.5",
    "openai-whisper>=20250625",
    "streamlit>=1.53.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.48.1",
]

[project.scripts]
transcribe-cli = "transcribe:transcribe_cli"
