[project]
name = "transcribe"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flet>=0.80.5",
    "flet-audio>=0.80.5",
    "openai-whisper>=20250625",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "auto-py-to-exe>=2.48.1",
    "ruff>=0.15.0",
]

[project.scripts]
transcribe-cli = "transcribe.transcribe:transcribe_cli"

[tool.flet]
project = "src"

[tool.ruff]
line-length = 160
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
